# LoraResearch

./: .gitignore  README.md  build_prompts.py  check_env.py  fix_vram.py  pyproject.toml  run_analyze_code_adapter.py  run_analyze_remaining_adapters.py  run_classify_features.py  run_collect_adapted.py  run_collect_base.py  run_cross_domain_comparison.py  run_day20_robustness.py  run_decode_sae.py  run_differential_analysis.py  run_generate_visualizations.py  run_label_features.py  run_validate_sae_transfer.py  train_adapters.py  verify_day7_sae_pipeline.py  verify_full_pipeline.py  verify_gemma.py  verify_sae.py
data/: prompts_300.json
lorasurgeon/: __init__.py  classify.py  collect.py  diff.py  fingerprint.py  project.py  sae_decode.py  steer.py  utils.py  viz.py
notebooks/: day19_visualizations.ipynb
results/: day12_sae_transfer_assessment.json  day12_sae_transfer_assessment.md  day13_differential_analysis.md  day14_feature_classification.md  day15_feature_labels.md  day16_code_adapter_deep_dive.json  day16_code_adapter_deep_dive.md  day17_medical_adapter_deep_dive.json  day17_medical_adapter_deep_dive.md  day18_remaining_adapter_analyses.json  day18_remaining_adapter_analyses.md  day18_universal_features.json  day18_universal_features.md  day19_visualizations.json  day19_visualizations.md  day20_robustness_summary.json  day20_robustness_summary.md  day21_fingerprint_vectors.json  day21_fingerprint_vectors.md  day22_similarity_analysis.json  day22_similarity_analysis.md  day23_fingerprint_embedding.json  day23_fingerprint_embedding.md  day7_sae_verification.json
(+54 files in other folders)
