[project]
name = "lorasurgeon"
version = "0.1.0"
description = "Analysing what LoRA adapters learn via sparse autoencoders"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "transformers>=4.47.0",
    "peft>=0.14.0",
    "sae-lens>=6.30.0",
    "transformer-lens>=2.10.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.2.0",
    "datasets>=3.2.0",
    "safetensors>=0.4.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends._legacy:_Backend"
